<resources>
    <string name="app_name">Unforgotchi</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="Email">unforgotchi-support@gmail.com</string>
    <string name="CompanyName">Unforgotchi</string>
    <string name="sync">Sync</string>
    <string name="trash">Trash</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="activity_1">Activity 1</string>
    <string name="this_is_our_logo">This is our logo</string>
    <string name="lists">Lists</string>
    <string name="locations">Locations</string>
    <string name="wifi">WiFi</string>
    <string name="gps">GPS</string>
    <string name="notifications">Notifications</string>
    <string name="wifiPermission">Allow Unforgotchi to read which WiFis are in reach</string>
    <string name="locationsPermission">Allow Unforgotchi to access your current location</string>
    <string name="notificationDesc">Enable notifications</string>
    <string name="notificationSel">Select Ringtone</string>
    <string name="scan_wifi">Scan WiFi</string>
    <string name="learn_the_first_steps_here"><u>Click to learn the first steps.</u></string>
</resources>