<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_lists"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/lists"/>

    <item
        android:id="@+id/nav_locations"
        android:icon="@drawable/ic_baseline_location_city_24"
        android:title="@string/locations"/>

    <item android:title="Personal">

        <menu>

            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_baseline_message_24"
                android:title="About Us"/>

        </menu>

    </item>

</menu>